--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "15.0.2",
-    "normalize.css": "8.0.1",
+    "normalize-scss": "8.0.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "sass": "1.80.6"
